--- a/profiles/templates/profiles/dashboard.html
+++ b/profiles/templates/profiles/dashboard.html
@@ -4,7 +4,7 @@
 <div class = 'pusher' style="background:white;">
 <div class="ui segment" style="position:relative; margin-top: 10px;">
 <div class="ui three statistics">
-  <div class="ui red inverted statistic">
+  <div class="ui red statistic">
     <div class="value">
       <i class="paw icon"></i> {{can_deploy}}
     </div>
