--- a/profiles/templates/profiles/sidebar_pa.html
+++ b/profiles/templates/profiles/sidebar_pa.html
@@ -15,26 +15,25 @@
                                 <a href="{% url 'planningandacquiring:add_K9_parents_form'%}" class="item">Breeding Form
                                         <i class="plus circle icon"></i>
                                 </a>
-                                 <a class="item">Breeding Recommendation
-                                        <i class="money bill alternate outline icon"></i>
-                                </a>
                                 <a href="{% url 'planningandacquiring:K9_list'%}" class="item">K9 List View
                                         <i class="list alternate icon"></i>
                                 </a>
-                                <a class="item">Budgeting
+                                <a href="{% url 'planningandacquiring:breeding_recommendation'%}" class="item">Breeding Recommendation
+                                        <i class="venus mars icon"></i>
+                                </a>
+
+                                <a href="{% url 'planningandacquiring:budgeting'%}" class="item">Budgeting
                                         <i class="money bill alternate outline icon"></i>
                                 </a>
 
-                                 <a class="item">Breeding Recommendation
-                                        <i class="money bill alternate outline icon"></i>
-                                </a>
+
                                 {% endif %}
 
                                 {% if request.session.session_user_position == "Administrator" %}
                                  <a href="{% url 'planningandacquiring:K9_forecast'%}" class="item">K9 Forecasting
                                        <i class="chart line icon"></i>
                                 </a>
-                             
+
                                 {% endif %}
 
 
