--- a/inventory/templates/inventory/medicine_add.html
+++ b/inventory/templates/inventory/medicine_add.html
@@ -44,8 +44,8 @@
                                         {{form.price}}
                                     </div>
                                     <div class="field">
-                                        <label>Yearly Used</label>
-                                        {{form.used_yearly}}
+                                        <label>Duration(In-Days)</label>
+                                        {{form.duration}}
                                     </div>
                                 </div>
 
@@ -70,15 +70,15 @@
     $(document).ready(function() {
         $('#tabledata').DataTable();
 
-        $("input[name='used_yearly']").prop('disabled', true);
+        $("input[name='duration']").prop('disabled', true);
 
         $("select[name='med_type']").change(function() {
             if ($("select[name='med_type']").val() == 'Vaccine'){
-                $("input[name='used_yearly']").prop('disabled', false);
+                $("input[name='duration']").prop('disabled', false);
                 $("input[name='dose']").val(1).prop('readonly', true);
                 $("select[name='uom']").prop('disabled', true);
             }else{
-                $("input[name='used_yearly']").prop('disabled', true);
+                $("input[name='duration']").prop('disabled', true);
                 $("input[name='dose']").val('').prop('readonly', false);
                 $("select[name='uom']").prop('disabled', false);
             }
