Vaccination Record/Preventive Health Program

--- a/profiles/templates/profiles/sidebar_um.html
+++ b/profiles/templates/profiles/sidebar_um.html
@@ -34,9 +34,9 @@
                                     <a href="{% url 'unitmanagement:physical_exam_form'%}" class="item">Physical Exam Form
                                         <i class="heartbeat icon"></i>
                                     </a>
-                                    <a href="{% url 'unitmanagement:vaccination_form'%}" class="item">Vaccination Form
+                                    <!-- <a href="{% url 'unitmanagement:vaccination_form'%}" class="item">Vaccination Form
                                         <i class="syringe icon"></i>
-                                    </a>
+                                    </a> -->
                                     <a href="{% url 'unitmanagement:health_record'%}" class="item">Health Records
                                         <i class="h square icon"></i>
                                     </a>
